# spire_enum

./: .gitignore  Cargo.toml  README.md  TODO  check.sh  rustfmt.toml
.github/: FUNDING.yml
proc_macro/: Cargo.toml
proc_macro/src/: into_syn.rs  lib.rs  macros.rs  spec.txt
proc_macro/src/delegate_impl/: inherent_impl.rs  mod.rs  shared.rs  trait_impl.rs
proc_macro/src/delegated_enum/: conversions.rs  enum_.rs  mod.rs  settings.rs  variant.rs  variant_fields.rs
proc_macro/src/delegated_enum/variants/: fields.rs  mod.rs  sanitize.rs
proc_macro/src/enum_refs/: mod.rs
proc_macro/src/ident_map/: expressions.rs  generics.rs  items.rs  mod.rs  paths.rs  patterns.rs  tests.rs  types.rs
proc_macro/src/shared/: attribute.rs  documentation.rs  enum_.rs  generics.rs  mod.rs  optional.rs  punctuated.rs  settings.rs  variant.rs
proc_macro/src/tables/: discriminant_to_generic.rs  mod.rs  variant_type_to_generic.rs  variant_type_to_variant_type.rs
spire_enum/: Cargo.toml
spire_enum/src/: lib.rs  traits.rs
tests/: Cargo.toml  rustfmt.toml
tests/src/: advanced_enum_test.rs  basic_enum_test.rs  conditional_compilation.rs  delegated_enum.rs  discriminant_generic_tables.rs  main.rs  settings_enum.rs  state_machine_test.rs  variant_generic_tables.rs  variant_type_tables.rs  weird.rs
tests/src/no_std_tests/: basic_enum_test.rs  discriminant_generic_tables.rs  mod.rs  settings_enum.rs  state_machine_test.rs  variant_generic_tables.rs  variant_type_tables.rs
tests/src/std_tests/: advanced_enum_test.rs  conditional_compilation.rs  delegated_enum.rs  mod.rs  variant_generic_tables.rs  variant_type_tables.rs  weird.rs
