[package]
name = "spire_enum_macros"
version = "0.2.1"
authors = ["Houtamelo <houtamelo@pm.me>"]
description = "Procedural macros to facilitate enum usage, such as when delegating implementations, extracting variant types, or creating enum tables."
edition = "2024"
homepage = "https://github.com/Houtamelo/spire_enum"
readme = "../README.md"
repository = "https://github.com/Houtamelo/spire_enum"
license = "MIT"
keywords = ["macro", "enum", "traits", "delegate", "variants"]
categories = ["rust-patterns"]
include = ["../LICENSE", "../README.md", "/src"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
proc-macro2 = "1.0.92"
syn = "2.0.90"
parsel = "0.16"
itertools = "0.14.0"
convert_case = "0.8.0"
