[package]
name = "spire_enum_macros"
version = "0.7.0"
authors = ["Houtamelo <houtamelo@pm.me>"]
description = "Procedural macros distributed by the crate `spire_enum`."
edition = "2024"
homepage = "https://github.com/Houtamelo/spire_enum"
repository = "https://github.com/Houtamelo/spire_enum"
license = "MIT"
keywords = ["macro", "enum", "traits", "delegate", "variants"]
categories = ["rust-patterns"]
include = ["../LICENSE", "/src"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
proc-macro2 = "1.0.92"
syn = "2.0.90"
parsel = "0.16"
itertools = "0.14.0"
convert_case = "0.8.0"
