[package]
name = "spire_enum"
version = "1.0.0"
authors = ["Houtamelo <houtamelo@pm.me>"]
description = "Procedural macros to facilitate enum usage, such as when delegating implementations, extracting variant types, or creating enum tables."
edition = "2024"
homepage = "https://github.com/Houtamelo/spire_enum"
readme = "../README.md"
repository = "https://github.com/Houtamelo/spire_enum"
license = "MIT"
keywords = ["macro", "enum", "traits", "delegate", "variants"]
categories = ["rust-patterns", "no-std", "no-std::no-alloc"]
include = ["../LICENSE", "../README.md", "/src"]

[dependencies]
spire_enum_macros = "1.0.0"
#spire_enum_macros = { path = "./../proc_macro" }